--- a/StatistikaCasoveRady/StatistikaCasoveRady/StatistikaCasoveRady.csproj
+++ b/StatistikaCasoveRady/StatistikaCasoveRady/StatistikaCasoveRady.csproj
@@ -37,6 +37,12 @@
     <Reference Include="EPPlus, Version=4.1.1.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <HintPath>..\packages\EPPlus.4.1.1\lib\net40\EPPlus.dll</HintPath>
     </Reference>
+    <Reference Include="LiveCharts, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiveCharts.0.9.7\lib\net45\LiveCharts.dll</HintPath>
+    </Reference>
+    <Reference Include="LiveCharts.Wpf, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiveCharts.Wpf.0.9.7\lib\net45\LiveCharts.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -59,12 +65,18 @@
     </ApplicationDefinition>
     <Compile Include="Bussines\FileManager.cs" />
     <Compile Include="Bussines\IFileManager.cs" />
+    <Compile Include="Command\ZCommand.cs" />
     <Compile Include="DTO\Obed.cs" />
+    <Compile Include="Graphs\GraphsBasicLineChart.cs" />
     <Compile Include="Services\IObedService.cs" />
     <Compile Include="Services\ObedService.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
     <Compile Include="View\MainPageView.xaml.cs">
       <DependentUpon>MainPageView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="WindowModel\GraphWindowModel.cs" />
+    <Compile Include="WindowView\GraphWindow.xaml.cs">
+      <DependentUpon>GraphWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -79,6 +91,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\MainPageView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowView\GraphWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
